Bug 1950162: Return undefined for weekOfYear and yearOfWeek for Gregorian. r=spidermonkey-reviewers,dminor

Return `undefined` per the discussions in <https://github.com/tc39/proposal-temporal/issues/3096>
and <https://github.com/tc39/proposal-intl-era-monthcode/issues/15>.

Differential Revision: https://phabricator.services.mozilla.com/D251135